Add comments list to details fragment

--- a/presentation/src/main/res/values/strings.xml
+++ b/presentation/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">presentation</string>
+    <string name="comments">Comments</string>
+    <string name="comments_header">Comments</string>
 </resources>
